--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -123,8 +123,8 @@
                 <label class="switcher-label">show camera</label>
                 <label class="switch"><input type="checkbox" checked v-model="elements.center_camera"><span class="slider round"></span></label>
                 <label class="switcher-label">center camera</label>
-                <label class="switch"><input type="checkbox" checked v-model="elements.show_components"><span class="slider round"></span></label>
-                <label class="switcher-label">show component graphics</label>
+                <!--<label class="switch"><input type="checkbox" checked v-model="elements.show_components"><span class="slider round"></span></label>
+                <label class="switcher-label">show component graphics</label>-->
                 <label class="switch"><input type="checkbox" checked v-model="elements.show_symbol"><span class="slider round"></span></label>
                 <label class="switcher-label">show symbols</label>
                 <span style="width: 330px; display: inline-block"><label v-if="nav_init">mouse: ({{canvas.cursor_mm.x | round}}/{{canvas.cursor_mm.y | round}})mm; robot ({{nav.camera.x | round}}/{{nav.camera.y | round}})mm</label></span>
