--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -14,6 +14,17 @@
 <body onload="start()" class="noselect" style="text-align: center;">
 <div id="app" style="width: 100%; max-width: 2600px; margin:0 auto;">
 
+    
+    <div class="alert" v-if="activealert">
+        <div class="alert-content">
+            <h1>Alert</h1>
+            <p>{{activealert.msg}}</p>
+            <div class="alert-button-list">
+                <div class="alert-button" v-for="answer in activealert.answers" v-on:click="do_alert_quit(activealert.id, answer)">{{answer}}</div>
+            </div>
+        </div>
+    </div>
+
     <div class="menu">
         <a class="logo" href="https://github.com/ftobler/pick-plaz" target="_blank">pick-plaz</a>
         <div class="menu-item" v-bind:class="{active : page == 0}" v-on:click="page = 0">Parts</div>
@@ -138,6 +149,9 @@
             
         </div>
     </div>
+
+
+
 
 </div>
 </body>
