--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -62,21 +62,21 @@
 
             <table>
                 <tr>
-                    <th width="20px">#</th>
-                    <th class="small" width="20px">Place</th>
-                    <th class="small" width="20px">fiducial</th>
-                    <th width="150px">Value</th>
-                    <th width="200px">Footprint</th>
-                    <th width="150px"></th>
-                    <th width="150px">Part Nr</th>
-                    <th width="200px">Feeder</th>
-                    <th width="150px">Rotation</th>
-                    <th width="150px">Designator</th>
-                    <th width="150px">X</th>
-                    <th width="150px">Y</th>
-                    <th width="150px">Rotation</th>
-                    <th width="200px">Status</th>
-                    <th width="400px">Action</th>
+                    <th width="10px">#</th>
+                    <th class="small" width="15px">Place</th>
+                    <th class="small" width="20px">Fiducial</th>
+                    <th width="130px">Value</th>
+                    <th width="90px">Footprint</th>
+                    <th width="30px"></th>
+                    <th width="130px">Part Nr</th>
+                    <th width="100px">Feeder</th>
+                    <th width="60px">Rotation</th>
+                    <th class="small" width="40px">Designator</th>
+                    <th class="small" width="40px">X-Pos</th>
+                    <th class="small" width="40px">Y-Pos</th>
+                    <th class="small" width="40px">Rotation</th>
+                    <th width="70px">Status</th>
+                    <th width="200px">Action</th>
                 </tr>
                 <tr v-for="(entry, i) in db.bom">
                     <td :rowspan="entry.parts.length">{{i}}</td>
@@ -86,22 +86,22 @@
                     <td>{{entry.footprint}}</td>
                     <td><img v-bind:src="entry.footprint | footprint_img_path"/> &nbsp;&nbsp;<img v-bind:src="entry.footprint | footprint_sym_path"/></td>
                     <td><a v-bind:href="'https://lcsc.com/search?q=' + entry.partnr" target="_blank">{{entry.partnr}}</a></td>
-                    <td contenteditable>{{entry.feeder}}</td> <!-- https://codepen.io/supraniti/pen/Lypobx -->
-                    <td width="200px"><div class="table-button material">refresh</div> {{entry.rot}}</td>
+                    <td contenteditable v-on:input="do_sequence($event.target.innerHTML)">{{entry.feeder}}</td> <!-- https://codepen.io/supraniti/pen/Lypobx -->
+                    <td width="200px"><div class="table-button material" v-on:click="do_bom_rotate(entry, i)">refresh</div> {{entry.rot}}</td>
                     <td class="cell-inline-table" colspan=6>
                         <table class="cell-inline-table">
                             <tr v-for="(part, id, index) in entry.parts">
-                                <td width="150px">{{id}}</td>
-                                <td width="150px">{{part.x}}</td>
-                                <td width="150px">{{part.y}}</td>
-                                <td width="150px"><div class="table-button material">refresh</div> {{part.rot}}</td>
-                                <td width="200px"><div class="table-button material">swap_horiz</div> {{part.state}}</td>
-                                <td v-if="entry.fiducial == false" width="400px">
+                                <td width="40px">{{id}}</td>
+                                <td width="40px">{{part.x}}</td>
+                                <td width="40px">{{part.y}}</td>
+                                <td width="40px">{{part.rot}}</td>
+                                <td width="70px"><div class="table-button material">swap_calls</div> {{part.state}}</td>
+                                <td v-if="entry.fiducial == false" width="200px">
                                     <button v-on:click="part_view_place(part)">view place</button> 
                                     <button v-on:click="part_view_pick(entry)">view pick</button>
                                     <button v-on:click="part_do_place(entry, part, id)">do place</button>
                                 </td>
-                                <td v-if="entry.fiducial == true"  width="400px">
+                                <td v-if="entry.fiducial == true"  width="200px">
                                     <button v-on:click="fiducial_goto(part)">goto</button>
                                     <button v-on:click="fiducial_assing_current_location(id, 'assign')">assign</button>
                                     <button v-on:click="fiducial_assing_current_location(id, 'unassign')">unassign</button>
@@ -117,15 +117,15 @@
         <div v-if="page == 1">
             <table>
                 <tr>
-                    <th width="300px">Name</th>
-                    <th width="300px">Type</th>
-                    <th width="300px">X</th>
-                    <th width="300px">Y</th>
-                    <th width="300px">width</th>
-                    <th width="300px">height</th>
-                    <th width="300px">Pitch</th>
-                    <th width="300px">Orientation</th>
-                    <th width="300px">Action</th>
+                    <th width="100px">Name</th>
+                    <th width="100px">Type</th>
+                    <th width="100px">X</th>
+                    <th width="100px">Y</th>
+                    <th width="100px">width</th>
+                    <th width="100px">height</th>
+                    <th width="100px">Pitch</th>
+                    <th width="100px">Orientation</th>
+                    <th width="100px">Action</th>
                 </tr>
                 <tr v-for="(entry, name) in db.feeder">
                     <td>{{name}}</td>
@@ -135,8 +135,8 @@
                     <td>{{entry.width}}</td>
                     <td>{{entry.height}}</td>
                     <td>{{entry.pitch}}</td>
-                    <td>{{entry.Orientation}}</td>
-                    <td><button>pick</button></td>
+                    <td><div class="table-button material" v-on:click="do_bom_rotate(entry, i)">refresh</div> {{entry.Orientation}}</td>
+                    <td><button>test pick</button></td>
                 </tr>
             </table>
         </div>
