--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -41,12 +41,12 @@
         </div>
 
         <div style="float: right;">
-            <div class="menu-pane">
+            <form class="menu-pane" method='POST' action='#' enctype='multipart/form-data' id='upload_form'>
                 <div class="menu-label">BOM & PNP</div>
-                <input class="menu-content" type="file" id="myFile" name="filename">
-                <input class="menu-content" type="file" id="myFile" name="filename">
-                <div class="menu-upload">north</div>
-            </div>
+                <input class="menu-content" type="file" id="bom_file" name="bom_upload">
+                <input class="menu-content" type="file" id="pnp_file" name="pnp_upload">
+                <div class="menu-upload" v-on:click="do_upload()">north</div>
+            </form>
             <div class="menu-pane">
                 <div class="menu-material" v-on:click="do_sequence('play')">play_arrow</div>
                 <div class="menu-material" v-on:click="do_sequence('pause')">pause</div>
