arrot on feeder

--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -129,7 +129,7 @@
                 </tr>
                 <tr v-for="(entry, name) in db.feeder">
                     <td>{{name}}</td>
-                    <td>{{entry.type}}</td>
+                    <td><div class="table-button material">swap_calls</div> {{entry.type}}</td>
                     <td>{{entry.x}}</td>
                     <td>{{entry.y}}</td>
                     <td>{{entry.width}}</td>
